# ArchSceneGraph

./: CMakeLists.txt  README.md
src/Core/: Application.cpp  Application.h  MeshNode.cpp  MeshNode.h  SceneNode.h
src/Entity/: Box.h  BoxColor.h
src/Shader/: Shader.h  ShaderBasicLighting.h
src/WinApp/: Main.cpp
src/WinGLTF/: Mesh.cpp  Mesh.h
src/WinGltf/: Main.cpp
